# vox

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Makefile
app/: Cargo.toml
app/src/: audio.rs  config.rs  llm_refine.rs  main.rs  text_inject.rs  transcribe.rs
docs/: unsafe-audit-2026-04-06.md
macos-sys/: Cargo.toml
macos-sys/src/: clipboard.rs  error.rs  event_tap.rs  input_source.rs  key_inject.rs  lib.rs  status_bar.rs
specs/: PLAN.md  meeting-minutes.spec.md  phase1-skeleton.spec.md  phase2-audio-hotkey.spec.md  phase3-transcribe-inject.spec.md  phase4-llm-settings.spec.md  phase5-polish.spec.md  project.spec.md  v0.1-release.spec.md
